feat: Update functionality
