# internal/common/models/wallet.go
@@ -1,0 +1,6 @@
+package models
+
+type Wallet struct {
+	User  string `json:"username" database:"username"`
+	Total int    `json:"total" database:"total"`
+}
